// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cart /> renders properly with cart array not empty 1`] = `
<div
  className="cart"
>
  <CartTable
    changeQuantity={[MockFunction]}
    deleteProductFromCart={[MockFunction]}
    isCurrencyLoading={true}
    productsInCart={
      Array [
        Object {
          "currentCurrencyCost": 5,
          "description": "test product 1 description",
          "id": "1",
          "imageURL": "#",
          "quantity": 3,
          "title": "test product 1",
        },
        Object {
          "currentCurrencyCost": 10,
          "description": "test product 2 description",
          "id": "2",
          "imageURL": "#",
          "quantity": 5,
          "title": "test product 2",
        },
      ]
    }
    sortColumn="id"
  />
  <div
    className="cart-footer"
  >
    <TotalCost
      customClasses="cart-footer__total"
      total={15}
    />
    <Link
      className="button button-solid cart-footer__order-button"
      to="/order"
    >
      Order Now!
    </Link>
  </div>
</div>
`;

exports[`<Cart /> renders properly with default props 1`] = `
<div
  className="cart"
>
  <h1
    className="cart__empty-message"
  >
    Your cart is empty
  </h1>
</div>
`;

exports[`<Cart /> renders properly with not empty cart and currentUserName provided 1`] = `
<div
  className="cart"
>
  <CartTable
    changeQuantity={[MockFunction]}
    deleteProductFromCart={[MockFunction]}
    isCurrencyLoading={true}
    productsInCart={
      Array [
        Object {
          "currentCurrencyCost": 5,
          "description": "test product 1 description",
          "id": "1",
          "imageURL": "#",
          "quantity": 3,
          "title": "test product 1",
        },
      ]
    }
    sortColumn="id"
  />
  <div
    className="cart-footer"
  >
    <TotalCost
      customClasses="cart-footer__total"
      total={5}
    />
    <Link
      className="button button-solid cart-footer__order-button"
      to="/order/mycart"
    >
      Order Now!
    </Link>
  </div>
</div>
`;
